force-app/main/default/objects/EnglishWord__c/EnglishWord__c.object-meta.xml
<CustomObject>
    <description>Stores English vocabulary, meanings, examples, difficulty, and quiz performance for the English learning application.</description>
    <label>English Word</label>
    <nameField>
        <label>English Word Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>English Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>