force-app/main/default/objects/EnglishWord__c/fields/CorrectCount__c.field-meta.xml
<CustomField>
    <fullName>CorrectCount__c</fullName>
    <description>Tracks how many quiz answers for this English word were correct.</description>
    <inlineHelpText>Enter the total number of correct quiz answers for this word.</inlineHelpText>
    <label>Correct Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>