force-app/main/default/objects/EnglishWord__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <description>Classifies the learning difficulty of the English word.</description>
    <inlineHelpText>Select the difficulty level used to organize study and quizzes.</inlineHelpText>
    <label>Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Easy</fullName><default>false</default><label>Easy</label></value>
            <value><fullName>Normal</fullName><default>false</default><label>Normal</label></value>
            <value><fullName>Hard</fullName><default>false</default><label>Hard</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>