force-app/main/default/objects/EnglishWord__c/fields/ExampleSentence__c.field-meta.xml
<CustomField>
    <fullName>ExampleSentence__c</fullName>
    <description>Stores a contextual sentence demonstrating how the English word is used.</description>
    <inlineHelpText>Enter an example sentence that uses the word naturally.</inlineHelpText>
    <label>Example Sentence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>