force-app/main/default/objects/EnglishWord__c/fields/LastQuizDate__c.field-meta.xml
<CustomField>
    <fullName>LastQuizDate__c</fullName>
    <description>Stores the most recent date on which this English word was used in a quiz.</description>
    <inlineHelpText>Enter the date when this word was most recently included in a quiz.</inlineHelpText>
    <label>Last Quiz Date</label>
    <type>Date</type>
</CustomField>