force-app/main/default/objects/EnglishWord__c/fields/Meaning__c.field-meta.xml
<CustomField>
    <fullName>Meaning__c</fullName>
    <description>Stores the meaning or translation used to learn the English word.</description>
    <inlineHelpText>Enter a clear meaning or translation for the word.</inlineHelpText>
    <label>Meaning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>