force-app/main/default/objects/EnglishWord__c/fields/PartOfSpeech__c.field-meta.xml
<CustomField>
    <fullName>PartOfSpeech__c</fullName>
    <description>Classifies the grammatical role of the English word or expression.</description>
    <inlineHelpText>Select the part of speech that best describes the word or expression.</inlineHelpText>
    <label>Part of Speech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Noun</fullName><default>false</default><label>Noun</label></value>
            <value><fullName>Verb</fullName><default>false</default><label>Verb</label></value>
            <value><fullName>Adjective</fullName><default>false</default><label>Adjective</label></value>
            <value><fullName>Adverb</fullName><default>false</default><label>Adverb</label></value>
            <value><fullName>Phrase</fullName><default>false</default><label>Phrase</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>