force-app/main/default/objects/EnglishWord__c/fields/QuizCount__c.field-meta.xml
<CustomField>
    <fullName>QuizCount__c</fullName>
    <description>Tracks how many times this English word has appeared in quizzes.</description>
    <inlineHelpText>Enter the total number of quiz attempts for this word.</inlineHelpText>
    <label>Quiz Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>