force-app/main/default/objects/EnglishWord__c/fields/Word__c.field-meta.xml
<CustomField>
    <fullName>Word__c</fullName>
    <description>Stores the English word or expression to study.</description>
    <inlineHelpText>Enter the English word or expression shown during study and quizzes.</inlineHelpText>
    <label>Word</label>
    <length>255</length>
    <type>Text</type>
</CustomField>